--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,36 +1,18 @@
- name: Build Android APK
-  on:
-    push:
-      branches:
-        - main
-    pull_request:
-      branches:
-        - main
-    workflow_dispatch:
-
+  name: Build APK
+  on: push
   jobs:
     build:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
-
-        - name: Set up JDK 11
-          uses: actions/setup-java@v3
+        - uses: actions/setup-java@v3
           with:
-            java-version: '11'
-            distribution: 'temurin'
-
-        - name: Setup Android SDK
-          uses: android-actions/setup-android@v2
-
-        - name: Grant execute permission for gradlew
-          run: chmod +x gradlew
-
-        - name: Build debug APK
-          run: ./gradlew assembleDebug
-
-        - name: Upload APK
-          uses: actions/upload-artifact@v3
+            java-version: 11
+            distribution: temurin
+        - uses: android-actions/setup-android@v2
+        - run: chmod +x gradlew
+        - run: ./gradlew assembleDebug
+        - uses: actions/upload-artifact@v3
           with:
-            name: media-mate-apk
+            name: app-debug
             path: app/build/outputs/apk/debug/app-debug.apk
